--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 <body>
 <left><h1>Екатерина Чеберяк</h1></left>
 <left><img alt="Это я" width="15%" scr="me.jpg"></left>
-<left><h2>Привет! Меня зовут Катя, мне 18 лет, и я учусь на философском в ВШЭ. Я очень люблю писать статьи, потому что это даёт возможность поделиться с окружающими своими мыслями и опытом. Это действительно доставляет мне удовольствие, поэтому в старших классах я работала в школьной газете. А ещё я очень люблю Imagine dragons, шоколад и собак (обязательно заведу себе джека-рассела-терьера!). Вот такая моя мини-биография :)
+  <left><h2>Привет! Меня зовут Катя, мне 18 лет, и я учусь на философском в ВШЭ. </h2>
+  <p>Я очень люблю писать статьи, потому что это даёт возможность поделиться с окружающими своими мыслями и опытом. Это действительно доставляет мне удовольствие, поэтому в старших классах я работала в школьной газете. </p>
+  <p>А ещё я очень люблю Imagine dragons, шоколад и собак (обязательно заведу себе джека-рассела-терьера!). Вот такая моя мини-биография :)<left><p>
 <br/>
 <h3>Contacts:</h3>
 Страничка: <a href=https://vk.com/chekate/>vkontakte</a>
