--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>Моя личная страничка</title>
 </head>
 <body>
-<left><h1>Екатерина Чеберяк</h1></left>
+  <left><h1><hr color="steelblue">Екатерина Чеберяк</hr> </h1></left>
 <left><img alt="Это я" width="15%" scr="me.jpg"></left>
   <left><h2>Привет! Меня зовут Катя, мне 18 лет, и я учусь на философском в ВШЭ. </h2>
   <p>Я очень люблю писать статьи, потому что это даёт возможность поделиться с окружающими своими мыслями и опытом. Это действительно доставляет мне удовольствие, поэтому в старших классах я работала в школьной газете. </p>
