--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 <title>Моя личная страничка</title>
 </head>
 <body>
-  <left><h1><hr color="#4682B4">Екатерина Чеберяк</hr> </h1></left>
+  <left><h1><hr color="#4682B4"><font color="#5F9EA0"> Екатерина Чеберяк</hr></font> </h1></left>
 <left><img alt="Это я" width="15%" scr="me.jpg"></left>
-  <left><h2>Привет! Меня зовут Катя, мне 18 лет, и я учусь на философском в ВШЭ. </h2>
+  <left><h2><em>Привет! Меня зовут Катя, мне 18 лет, и я учусь на философском в ВШЭ.</em> </h2>
   <p>Я очень люблю писать статьи, потому что это даёт возможность поделиться с окружающими своими мыслями и опытом. Это действительно доставляет мне удовольствие, поэтому в старших классах я работала в школьной газете. </p>
   <p>А ещё я очень люблю Imagine dragons, шоколад и собак (обязательно заведу себе джека-рассела-терьера!). Вот такая моя мини-биография :)<left><p>
 <br/>
