--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <p>Я очень люблю писать статьи, потому что это даёт возможность поделиться с окружающими своими мыслями и опытом. Это действительно доставляет мне удовольствие, поэтому в старших классах я работала в школьной газете. </p>
   <p>А ещё я очень люблю Imagine dragons, шоколад и собак (обязательно заведу себе джека-рассела-терьера!). Вот такая моя мини-биография :)<left><p>
 <br/>
-<h3>Contacts:</h3>
+    <h3><hr color="#4682B4">Contacts:</hr></h3>
 Страничка: <a href=https://vk.com/chekate/>vkontakte</a>
 <br/>
 <a href=http://github.com/katechehse>GitHub</a>
