--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <meta charset="utf-8">
 <title>Моя личная страничка</title>
 </head>
-<body>
+<body bgcolor="FFF8DC">
   <left><h1><hr color="#4682B4"><font color="#5F9EA0"> Екатерина Чеберяк</hr></font> </h1></left>
 <left><img alt="Это я" width="15%" scr="me.jpg"></left>
   <left><h2><em>Привет! Меня зовут Катя, мне 18 лет, и я учусь на философском в ВШЭ.</em> </h2>
-  <p>Я очень люблю писать статьи, потому что это даёт возможность поделиться с окружающими своими мыслями и опытом. Это действительно доставляет мне удовольствие, поэтому в старших классах я работала в школьной газете. </p>
-  <p>А ещё я очень люблю Imagine dragons, шоколад и собак (обязательно заведу себе джека-рассела-терьера!). Вот такая моя мини-биография :)<left><p>
+  <p><tt>Я очень люблю писать статьи, потому что это даёт возможность поделиться с окружающими своими мыслями и опытом. Это действительно доставляет мне удовольствие, поэтому в старших классах я работала в школьной газете. </tt></p>
+  <p><tt>А ещё я очень люблю Imagine dragons, шоколад и собак (обязательно заведу себе джека-рассела-терьера!). Вот такая моя мини-биография :)</tt><left><p>
 <br/>
     <h3><hr color="#4682B4">Contacts:</hr></h3>
 Страничка: <a href=https://vk.com/chekate/>vkontakte</a>
