--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <title>Моя личная страничка</title>
 </head>
-<body bgcolor="FFF8DC">
+<body bgcolor="FOF8FF">
   <left><h1><hr color="#4682B4"><font color="#5F9EA0"> Екатерина Чеберяк</hr></font> </h1></left>
 <left><img alt="Это я" width="15%" scr="me.jpg"></left>
   <left><h2><em>Привет! Меня зовут Катя, мне 18 лет, и я учусь на философском в ВШЭ.</em> </h2>
