--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 <body bgcolor="#F0F8FF">
   <left><h1><hr color="#4682B4"><font color="#5F9EA0"><u> Екатерина Чеберяк </u></hr></font> </h1></left>
 <left><img alt="Это я" width="15%" scr="me.jpg"></left>
-  <left><h2><em><font color="#778899">Привет! Меня зовут Катя, мне 18 лет, и я учусь на философском в ВШЭ.</em> </h2>
+  <left><h2><em><font color="#2E8B57">Привет! Меня зовут Катя, мне 18 лет, и я учусь на философском факультете в ВШЭ.</em> </h2>
   <p><tt>Я очень люблю писать статьи, потому что это даёт возможность поделиться с окружающими своими мыслями и опытом. Это действительно доставляет мне удовольствие, поэтому в старших классах я работала в школьной газете. </tt></p>
-  <p><tt>А ещё я очень люблю Imagine dragons, шоколад и собак (обязательно заведу себе джека-рассела-терьера!). Вот такая моя мини-биография :)</tt><left><p></font>
+  <p><tt>А ещё я очень люблю Imagine dragons, шоколад и собак (обязательно заведу джека-рассела-терьера!). Вот такая мини-биография. </tt><left><p></font>
 <br/>
     <h3><hr color="#4682B4">Contacts:</hr></h3>
 Страничка: <a href=https://vk.com/chekate/>vkontakte</a>
