--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>Моя личная страничка</title>
 </head>
 <body bgcolor="#F0F8FF">
-  <left><h1><hr color="#4682B4"><font color="#5F9EA0"><u> Екатерина Чеберяк </u></hr></font> </h1></left>
+  <left><h1><hr color="#4682B4"><font color="#5F9EA0"><u> <p style="font-style:oblique">Екатерина Чеберяк font-style:oblique</p></u></hr></font> </h1></left>
 <left><img alt="Это я" width="15%" scr="me.jpg"></left>
   <left><h2><em><font color="#2E8B57">Привет! Меня зовут Катя, мне 18 лет, и я учусь на философском факультете в ВШЭ.</em> </h2>
   <p><tt>Я очень люблю писать статьи, потому что это даёт возможность поделиться с окружающими своими мыслями и опытом. Это действительно доставляет мне удовольствие, поэтому в старших классах я работала в школьной газете. </tt></p>
